Change for issue #531 Refactor variant filter reporting to be consistent in logs and HTML output. Also fixed bug where frequency and pathogenicity filters would not be provided with data when run after the initial variant load & filter step. Moved analysis.FilterStats to new filters.FilterResultsCounter Add new FilterResultCount data class Add AnalysisResults.filterResultCounts field Add new FilterRunner.filterCounts and FilterRunner.logFilterResult methods Remove brittle logic for FilterStats from AbstractAnalysisRunner Add Filterable.failedFilter method to enable tracking of both passed and failed filters (previously only passed was exposed)